--- a/modules/planning/proxy/BUILD
+++ b/modules/planning/proxy/BUILD
@@ -3,13 +3,32 @@ package(default_visibility = ["//visibility:public"])
 load("//tools:cpplint.bzl", "cpplint")
 
 cc_library(
-    name = "proxy",
+    name = "perception_proxy",
+    srcs = [
+        "perception_proxy.cc",
+    ],
+    hdrs = [
+        "perception_proxy.h",
+    ],
+    deps = [
+        "//external:gflags",
+        "//modules/common/math",
+        "//modules/common/status",
+        "//modules/common/util",
+        "//modules/map/proto:map_proto",
+        "//modules/perception/proto:perception_proto",
+        "//modules/planning/common:planning_gflags",
+    ],
+)
+
+cc_library(
+    name = "routing_proxy",
     srcs = [
         "routing_proxy.cc",
     ],
-    hdrs = glob([
-        "*.h",
-    ]),
+    hdrs = [
+        "routing_proxy.h",
+    ],
     data = ["//modules/map:map_data"],
     deps = [
         "//external:gflags",
