Add apollo::common::Vec2D proto and utils.

--- a/modules/common/math/BUILD
+++ b/modules/common/math/BUILD
@@ -53,6 +53,20 @@ cc_library(
 )
 
 cc_library(
+    name = "vec2d_utils",
+    srcs = [
+        "vec2d_utils.cc",
+    ],
+    hdrs = [
+        "vec2d_utils.h",
+    ],
+    deps = [
+        "//modules/common:log",
+        "//modules/common/proto:vector_proto",
+    ],
+)
+
+cc_library(
     name = "aabox2d",
     srcs = [
         "aabox2d.cc",
@@ -350,6 +364,18 @@ cc_test(
     ],
     deps = [
         ":vec2d",
+        "@gtest//:main",
+    ],
+)
+
+cc_test(
+    name = "vec2d_utils_test",
+    size = "small",
+    srcs = [
+        "vec2d_utils_test.cc",
+    ],
+    deps = [
+        ":vec2d_utils",
         "@gtest//:main",
     ],
 )
