--- a/modules/planning/optimizer/dp_poly_path/BUILD
+++ b/modules/planning/optimizer/dp_poly_path/BUILD
@@ -33,6 +33,6 @@ cc_library(
         "//modules/planning/math:sl_analytic_transformation",
         "//modules/planning/math/curve1d:polynomial_curve1d",
         "//modules/planning/math/curve1d:quintic_polynomial_curve1d",
-        "//modules/planning/reference_line:lib_reference_line",
+        "//modules/planning/reference_line",
     ],
 )
