--- a/modules/common/adapters/BUILD
+++ b/modules/common/adapters/BUILD
@@ -85,6 +85,7 @@ cc_library(
         "//modules/perception/proto:perception_proto",
         "//modules/planning/proto:planning_proto",
         "//modules/prediction/proto:prediction_proto",
+        "//modules/map/proto:map_proto",
         "@glog//:glog",
     ],
 )
