--- a/modules/perception/obstacle/base/BUILD
+++ b/modules/perception/obstacle/base/BUILD
@@ -1,12 +1,13 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "base",
+    name = "perception_obstacle_base",
     srcs = glob(["*.cc"]),
     hdrs = glob(["*.h"]),
     deps = [
+        "//modules/perception/lib/pcl_util:pcl_util",
         "//modules/common:common",
-        "//modules/common:log",
-        "//external:gflags",
+        "@eigen//:eigen",
     ],
 )
+
