added st_boundary_mapper.h/cc; warning appear at build because hdmap hasn't support for LaneInfo.is_on_lane function.

--- a/modules/planning/optimizer/st_graph/BUILD
+++ b/modules/planning/optimizer/st_graph/BUILD
@@ -45,4 +45,31 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "st_boundary_mapper",
+    srcs = [
+        "st_boundary_mapper.cc",
+    ],
+    hdrs = [
+        "st_boundary_mapper.h",
+    ],
+    deps = [
+        ":st_graph_boundary",
+        "//modules/map/proto:map_proto",
+        "//modules/common/configs/proto:vehicle_config_proto",
+        "//modules/map/hdmap:hdmap",
+        "//modules/planning/reference_line:reference_line",
+        "//modules/planning/common:data_center",
+        "//modules/planning/common/path:path_data",
+        "//modules/planning/common/path:discretized_path",
+        "//modules/planning/common/path:frenet_frame_path",
+        "//modules/planning/common:speed_limit",
+        "//modules/planning/math:double",
+        "//modules/planning/state_machine:master_state_machine",
+        "//modules/common/proto:path_point_proto",
+        "//modules/planning/proto:planning_proto",
+        "//modules/planning/common:planning_gflags",
+    ],
+)
+
 
