Revert "Migrate LogicPoint and LogicInfo to proto."
This reverts commit 8107fcadd2e99e5f56c97972b945f18663b7e48b.

--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -72,12 +72,16 @@ cc_library(
 )
 
 cc_library(
-    name = "logic_node",
+    name = "logic_map",
     srcs = [
+        "logic_info.cc",
         "logic_node.cc",
+        "logic_point.cc",
     ],
     hdrs = [
+        "logic_info.h",
         "logic_node.h",
+        "logic_point.h",
     ],
     deps = [
         "//modules/common/math",
