--- a/modules/common/math/BUILD
+++ b/modules/common/math/BUILD
@@ -21,7 +21,7 @@ cc_library(
         ":quaternion",
         ":search",
         ":sin_table",
-        ":vec2d_utils",
+        ":vec2d",
     ],
 )
 
@@ -34,7 +34,20 @@ cc_library(
         "math_utils.h",
     ],
     deps = [
-        ":vec2d_utils",
+        ":vec2d",
+        "//modules/common:log",
+    ],
+)
+
+cc_library(
+    name = "vec2d",
+    srcs = [
+        "vec2d.cc",
+    ],
+    hdrs = [
+        "vec2d.h",
+    ],
+    deps = [
         "//modules/common:log",
     ],
 )
@@ -63,7 +76,7 @@ cc_library(
     ],
     deps = [
         ":math_utils",
-        ":vec2d_utils",
+        ":vec2d",
         "//modules/common:log",
     ],
 )
@@ -81,7 +94,7 @@ cc_library(
         ":line_segment2d",
         ":math_utils",
         ":polygon2d",
-        ":vec2d_utils",
+        ":vec2d",
         "//modules/common:log",
     ],
 )
@@ -116,7 +129,7 @@ cc_library(
     ],
     deps = [
         ":math_utils",
-        ":vec2d_utils",
+        ":vec2d",
         "@eigen//:eigen",
     ],
 )
@@ -129,7 +142,7 @@ cc_library(
     deps = [
         ":aabox2d",
         ":math_utils",
-        ":vec2d_utils",
+        ":vec2d",
         "//modules/common:log",
     ],
 )
@@ -142,7 +155,7 @@ cc_library(
     deps = [
         ":euler_angles_zxy",
         ":math_utils",
-        ":vec2d_utils",
+        ":vec2d",
         "//modules/common/proto:common_proto",
         "@eigen//:eigen",
     ],
@@ -192,7 +205,7 @@ cc_library(
     ],
     deps = [
         "math_utils",
-        ":vec2d_utils",
+        ":vec2d",
         "//modules/common:log",
     ],
 )
@@ -211,7 +224,7 @@ cc_library(
         ":aabox2d",
         ":line_segment2d",
         ":math_utils",
-        ":vec2d_utils",
+        ":vec2d",
         "//modules/common:log",
     ],
 )
@@ -339,6 +352,18 @@ cc_test(
     ],
     deps = [
         ":integral",
+        "@gtest//:main",
+    ],
+)
+
+cc_test(
+    name = "vec2d_test",
+    size = "small",
+    srcs = [
+        "vec2d_test.cc",
+    ],
+    deps = [
+        ":vec2d",
         "@gtest//:main",
     ],
 )
