--- a/modules/planning/math/frame_conversion/BUILD
+++ b/modules/planning/math/frame_conversion/BUILD
@@ -12,6 +12,7 @@ cc_library(
     ],
     deps = [
         "//modules/common:log",
+        "//modules/common/math:vec2d",
         "//modules/common/math:math_utils",
     ],
 )
