--- a/modules/planning/optimizer/BUILD
+++ b/modules/planning/optimizer/BUILD
@@ -84,3 +84,23 @@ cc_library(
         "//modules/planning/common/speed:speed_data",
     ],
 )
+
+cc_library(
+    name = "speed_optimizer",
+    srcs = [
+        "speed_optimizer.cc",
+    ],
+    hdrs = [
+        "speed_optimizer.h",
+        "optimizer.h",
+    ],
+    deps = [
+        "@eigen//:eigen",
+        "//modules/common/proto:error_code_proto",
+        "//modules/planning/common:data_center",
+        "//modules/planning/common:decision_data",
+        "//modules/planning/common:planning_data",
+        "//modules/planning/common/path:path_data",
+        "//modules/planning/common/speed:speed_data",
+    ],
+)
