Added lane sequence and free move predictor framework (#127)
* Fixed planning styling issues, and resolved a conflict

Fixed planning styling issues

Fixed planning styling issues

Fixed planning styling issues

Fixed some styling errors

Resolved a conflict

* Added mlp evaluator in evaluator factory

* modified prediction conf in pb

* Added free move predictor framework

--- a/modules/prediction/predictor/BUILD
+++ b/modules/prediction/predictor/BUILD
@@ -30,8 +30,9 @@ cc_library(
 cc_library(
     name = "predictor",
     hdrs = ["predictor.h"],
+    srcs = ["predictor.cc"],
     deps = [
-    
+        "//modules/prediction/proto:prediction_proto",
     ]
 )
 
