--- a/modules/prediction/proto/BUILD
+++ b/modules/prediction/proto/BUILD
@@ -10,6 +10,7 @@ cc_proto_library(
     ],
     deps = [
         "//modules/common/proto:common_proto",
+        "//modules/perception/proto:perception_proto",
     ],
 )
 
