added qp_spline_st_boundary_mapper.h/cc (#139)

--- a/modules/common/util/BUILD
+++ b/modules/common/util/BUILD
@@ -16,6 +16,7 @@ cc_library(
     ],
     deps = [
         "//modules/common/math",
+        "//modules/common/proto:path_point_proto",
         "//modules/common/time",
     ],
 )
