Fix dreamview roadgraph rendering (#137)

--- a/modules/map/hdmap/BUILD
+++ b/modules/map/hdmap/BUILD
@@ -17,6 +17,7 @@ cc_library(
     deps = [
         "@glog//:glog",
         "//modules/common/math",
+        "//modules/common/util",
         "//modules/common:macro",
         "//modules/map/proto:map_proto",
     ],
