--- a/modules/common/util/BUILD
+++ b/modules/common/util/BUILD
@@ -21,6 +21,11 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "lru_cache",
+    hdrs = ["lru_cache.h"],
+)
+
 cc_test(
     name = "util_test",
     size = "small",
@@ -81,6 +86,18 @@ cc_test(
     deps = [
         ":util",
         "//modules/common/util/testdata:simple_proto",
+        "@gtest//:main",
+    ],
+)
+
+cc_test(
+    name = "lru_cache_test",
+    size = "small",
+    srcs = [
+        "lru_cache_test.cc",
+    ],
+    deps = [
+        "//modules/common/util:lru_cache",
         "@gtest//:main",
     ],
 )
