--- a/modules/planning/optimizer/st_graph/BUILD
+++ b/modules/planning/optimizer/st_graph/BUILD
@@ -60,12 +60,17 @@ cc_library(
         "//modules/common/proto:path_point_proto",
         "//modules/map/hdmap",
         "//modules/map/proto:map_proto",
-        "//modules/planning/common:data_center",
+        "//modules/planning/common:decision_data",
+        "//modules/planning/common:map_object",
+        "//modules/planning/common:obstacle",
         "//modules/planning/common:planning_gflags",
+        "//modules/planning/common:planning_object",
         "//modules/planning/common:speed_limit",
         "//modules/planning/common/path:discretized_path",
         "//modules/planning/common/path:frenet_frame_path",
         "//modules/planning/common/path:path_data",
+        "//modules/planning/common/trajectory:discretized_trajectory",
+        "//modules/planning/common/trajectory:prediction_trajectory",
         "//modules/planning/math:double",
         "//modules/planning/proto:planning_proto",
         "//modules/planning/reference_line",
