--- a/modules/tools/map_tool/BUILD
+++ b/modules/tools/map_tool/BUILD
@@ -11,7 +11,18 @@ cc_binary(
         "//modules/common",
         "//modules/common/util",
         "//modules/map/proto:map_proto",
-        
+    ],
+)
+
+cc_binary(
+    name = "map_xysl",
+    srcs = ["map_xysl.cc"],
+    data = ["//modules/map:map_data"],
+    deps = [
+        "//external:gflags",
+        "//modules/common",
+        "//modules/common/util",
+        "//modules/map/hdmap",
     ],
 )
 
