Updated predictor and evaluator managers (#151)
* modified prediction conf in pb

* added speed_optimizer

* removed ptree and added proto based config for dp_poly_path

* added speed_optimizer

* added speed_optimizer

* Added lane sequence and free move predictor framework (#127)

* Fixed planning styling issues, and resolved a conflict

Fixed planning styling issues

Fixed planning styling issues

Fixed planning styling issues

Fixed some styling errors

Resolved a conflict

* Added mlp evaluator in evaluator factory

* modified prediction conf in pb

* Added free move predictor framework

* removed ptree and added proto based config for dp_poly_path

* Resolved free move predictor conflict

* added speed_optimizer

* Added lane sequence and free move predictor framework (#127)

* Fixed planning styling issues, and resolved a conflict

Fixed planning styling issues

Fixed planning styling issues

Fixed planning styling issues

Fixed some styling errors

Resolved a conflict

* Added mlp evaluator in evaluator factory

* modified prediction conf in pb

* Added free move predictor framework

* removed ptree and added proto based config for dp_poly_path

* removed ptree and added proto based config for dp_poly_path

* Resolved free move predictor conflict

* Finalized prediction framework

* added dp_st_speed and qp_spline_speed, ready for migrate

* added qp_spline_st_boundary_mapper.h/cc (#139)

* implement most of prediction_map.cc

* add MakeSLPoint in common/util (#141)

* Fix dreamview roadgraph rendering (#137)

* render perception obstacles in dreamview frontend (#142)

* Fix control test filures after ADCTranjactory proto change.

* Avoid copying data if message_num is set as 0

* Rename function and adjust style

* remove data_center dp_poly_path optimizer (#147)

* add lru cache

* Simple fixes to satisfy lint.

* Updated evaluator and predictor managers

--- a/modules/prediction/container/obstacles/BUILD
+++ b/modules/prediction/container/obstacles/BUILD
@@ -8,7 +8,8 @@ cc_library(
     hdrs = ["obstacles_container.h"],
     deps = [
         "//modules/prediction/container:container",
-    ]
+        "//modules/prediction/container/obstacles:obstacle",
+    ],
 )
 
 cc_library(
