Implement obstacle::set_current_lane and add AngleDiff in apollo/common/math/math_utils.cc (#157)

--- a/modules/prediction/BUILD
+++ b/modules/prediction/BUILD
@@ -26,7 +26,7 @@ cc_binary(
     name = "prediction",
     srcs = ["main.cc"],
     deps = [
-        ":prediction_lib",
+        "//modules/prediction:prediction_lib",
         "//external:gflags",
     ],
 )
