moved STPoint to class implementation (#159)
* easier for coding
* less error prone for building ST graph.

--- a/modules/planning/optimizer/st_graph/BUILD
+++ b/modules/planning/optimizer/st_graph/BUILD
@@ -9,8 +9,8 @@ cc_library(
         "st_graph_point.h",
     ],
     deps = [
-        "//modules/common/proto:path_point_proto",
         "//modules/planning/common:planning_gflags",
+        "//modules/planning/common/speed:st_point",
     ],
 )
 
@@ -41,7 +41,6 @@ cc_library(
     ],
     deps = [
         ":st_graph_boundary",
-        "//modules/common/proto:path_point_proto",
         "//modules/planning/common:planning_gflags",
     ],
 )
