--- a/modules/planning/common/speed/BUILD
+++ b/modules/planning/common/speed/BUILD
@@ -1,6 +1,21 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
+    name = "st_point",
+    srcs = [
+        "st_point.cc",
+    ],
+    hdrs = [
+        "st_point.h",
+    ],
+    deps = [
+        "//external:gflags",
+        "//modules/common/math",
+        "//modules/planning/math:double",
+    ],
+)
+
+cc_library(
     name = "speed_data",
     srcs = [
         "speed_data.cc",
@@ -9,10 +24,11 @@ cc_library(
         "speed_data.h",
     ],
     deps = [
+        ":st_point",
         "//external:gflags",
         "//modules/common/math",
+        "//modules/common/proto:path_point_proto",
         "//modules/planning/math:double",
         "//modules/planning/proto:planning_proto",
-        "//modules/common/proto:path_point_proto",
     ],
 )
