--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -1,1 +1,24 @@
 --adapter_config_path=modules/perception/conf/adapter.conf
+
+####################################################################
+# Flags from lib/config_manager/config_manager.cpp
+# The ModelConfig config paths file.
+# type: string
+# default: ./conf/config_manager.config
+--config_manager_path=./conf/config_manager.config
+
+# Project work root directory.
+# type: string
+# default: ""
+--work_root=
+
+
+# roi filter before GroundDetector.
+# type: string
+# default:
+--onboard_prev_gd_roi_filter=HdmapROIFilter
+
+# enable hdmap input for roi filter
+# type: bool
+# default: false
+--enable_hdmap_input=true
