add lidar_process and hdmap interface (#162)
* add pcl_util

* add perception common lib files

* add lidar_process, and modify code style

--- a/modules/perception/obstacle/base/BUILD
+++ b/modules/perception/obstacle/base/BUILD
@@ -6,6 +6,7 @@ cc_library(
     hdrs = glob(["*.h"]),
     deps = [
         "//modules/perception/lib/pcl_util:pcl_util",
+        "//modules/perception/common:perception_common",
         "//modules/common:common",
         "@eigen//:eigen",
     ],
