--- a/modules/perception/obstacle/lidar/interface/BUILD
+++ b/modules/perception/obstacle/lidar/interface/BUILD
@@ -1,12 +1,13 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "interface",
+    name = "perception_obstacle_lidar_interface",
     srcs = [],
     hdrs = glob(["*.h"]),
     deps = [
         "//modules/perception/lib/pcl_util:pcl_util",
         "//modules/perception/lib/base:base",
         "//modules/perception/obstacle/base:perception_obstacle_base",
+        "@eigen//:eigen",
     ]
 )
