--- a/modules/planning/optimizer/BUILD
+++ b/modules/planning/optimizer/BUILD
@@ -24,26 +24,13 @@ cc_library(
         "path_optimizer.h",
     ],
     deps = [
-        "//modules/common/proto:error_code_proto",
-        "//modules/planning/optimizer",
-        "//modules/planning/optimizer/dp_poly_path",
+        ":optimizer",
+        "//modules/planning/common:data_center",
+        "//modules/planning/common:decision_data",
+        "//modules/planning/common:planning_data",
+        "//modules/planning/common/path:path_data",
+        "//modules/planning/common/speed:speed_data",
         "@eigen//:eigen",
-    ],
-)
-
-cc_library(
-    name = "dp_poly_path_optimizer",
-    srcs = [
-        "dp_poly_path_optimizer.cc",
-    ],
-    hdrs = [
-        "dp_poly_path_optimizer.h",
-    ],
-    deps = [
-        "//modules/common/util",
-        "//modules/planning/optimizer",
-        "//modules/planning/optimizer:path_optimizer",
-        "//modules/planning/proto:dp_poly_path_config_proto",
     ],
 )
 
@@ -53,11 +40,10 @@ cc_library(
         "speed_optimizer.cc",
     ],
     hdrs = [
-        "optimizer.h",
         "speed_optimizer.h",
     ],
     deps = [
-        "//modules/common/proto:error_code_proto",
+        ":optimizer",
         "//modules/planning/common:data_center",
         "//modules/planning/common:decision_data",
         "//modules/planning/common:planning_data",
