switch planning to em_planner and fix diagnostics.

--- a/modules/common/proto/BUILD
+++ b/modules/common/proto/BUILD
@@ -63,5 +63,6 @@ py_proto_compile(
         "geometry.proto",
         "header.proto",
         "path_point.proto",
+        "vehicle_signal.proto",
     ],
 )
