Partially implemented obstacle container in prediction module

--- a/modules/prediction/container/obstacles/BUILD
+++ b/modules/prediction/container/obstacles/BUILD
@@ -9,6 +9,7 @@ cc_library(
     deps = [
         "//modules/prediction/container:container",
         "//modules/prediction/container/obstacles:obstacle",
+        "//modules/common/util:lru_cache",
     ],
 )
 
