--- a/WORKSPACE.in
+++ b/WORKSPACE.in
@@ -180,7 +180,9 @@ new_http_archive(
     name = "ros",
     build_file = "third_party/ros.BUILD",
     strip_prefix = "ros",
-    url = "https://github.com/ApolloAuto/apollo-platform/releases/download/1.0.0/ros-indigo-apollo-1.0.0.MACHINE_ARCH.tar.gz",
+    # url = "https://github.com/ApolloAuto/apollo-platform/releases/download/1.0.0/ros-indigo-apollo-1.0.0.MACHINE_ARCH.tar.gz",
+    # temporary ros archive for apollo-1.5
+    url = "https://github.com/fengqikai1414/apollo-platform/files/1171045/ros-indigo-apollo-1.5-x86_64-dev.tar.gz",
 )
 
 # OpenCV 2.4.13.2
