migrate dreamview to apollo_app

--- a/modules/dreamview/backend/BUILD
+++ b/modules/dreamview/backend/BUILD
@@ -4,9 +4,16 @@ package(default_visibility = ["//visibility:public"])
 
 cc_library(
     name = "backend",
-    srcs = ["server.cc"],
+    hdrs = [
+        "dreamview.h",
+    ],
+    srcs = [
+        "dreamview.cc",
+        "main.cc",
+    ],
     deps = [
         "//modules/common/adapters:adapter_manager",
+        "//modules/common:apollo_app",
         "//modules/dreamview/backend/simulation_world:simulation_world_updater",
         "//modules/dreamview/backend/websocket",
         "@civetweb//:civetweb++",
